<resources>
    <string name="app_name">Workout App</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pick_image">Pick Image</string>
    <string name="enter_workout_title">Enter Workout Title</string>
    <string name="describe_workout">Describe Workout</string>
    <string name="repeats">Repeats</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="finish">Finish</string>
    <string name="workout_title">Workout Title</string>
    <string name="title">Title</string>
    <string name="desc">desc</string>
    <string name="weight">Weight:</string>
    <string name="repeats_item">Repeats:</string>
    <string name="my_workouts">My Workouts</string>
    <string name="return_button">Return</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="empty_workout_warning">WORKOUT CANT BE EMPTY!</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete all items?</string>
    <string name="all_items_delete_confirmed">Items Deleted</string>
    <string name="yes">Yes</string>
    <string name="critical_weather">Outdoor activities are not recommended</string>
    <string name="drink_water">Don\'t forget to drink water during outdoor activities</string>
    <string name="comfortable_weather">Great weather for outdoor activities</string>
    <string name="date_and_time">Date and Time</string>
    <string name="reps">Reps :</string>
    <string name="sets">Sets :</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="empty_ex_warning">EXERCISES CANNOT BE EMPTY!</string>
    <string name="added_exercise">Exercise added!</string>
</resources>